# quickcheck

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  cargo-lite.conf  qc.rs  session.vim
.github/workflows/: ci.yml
benches/: tuples.rs
doc/quickcheck/: index.html  search-index.js  trait.Shrink.html
doc/src/quickcheck/src/: lib.rs.html  shrink.rs.html
examples/: attribute.rs  btree_set_range.rs  out_of_bounds.rs  reverse.rs  reverse_single.rs  sieve.rs  sort.rs  test
quickcheck_derive/: Cargo.toml
quickcheck_derive/src/: attrs.rs  lib.rs  structural.rs
quickcheck_derive/tests/: constraints.rs  enum.rs  move_type.rs  rect.rs  struct.rs
quickcheck_macros/: Cargo.toml  UNLICENSE
quickcheck_macros/examples/: attribute.rs
quickcheck_macros/src/: lib.rs
quickcheck_macros/tests/: macro.rs
src/: arbitrary.rs  entropy_pool.rs  lib.rs  shrink.rs  statem.rs  tester.rs  tests.rs
src/arbitrary/: rand_rng_impl.rs
tests/: macro.rs
