[package]
name = "quickcheck"
version = "1.0.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "https://docs.rs/quickcheck"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense/MIT"
exclude = ["/.travis.yml", "/Makefile", "/ctags.rust", "/session.vim"]
edition = "2018"

[workspace]
members = ["quickcheck_macros"]

[features]
default = ["regex", "use_logging"]
use_logging = ["log", "env_logger"]
regex = ["env_logger/regex"]

[lib]
name = "quickcheck"

[dependencies]
env_logger = { version = "0.8.2", default-features = false, optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.8", default-features = false, features = ["getrandom", "small_rng"] }
