[package]
authors = [
  "Nathaniel Ringo <remexre@gmail.com>",
  "Felix Chapman <aelred717@gmail.com>",
  "Michael Howell <michael@notriddle.com>"
]
description = "#[derive(Arbitrary, Clone)]"
license = "MIT"
name = "quickcheck_derive"
version = "0.1.2"

[dependencies]
quote = "^0.3.15"
syn = "^0.11.11"
rand = "0.5"

[dev-dependencies.quickcheck]
path = ".."
version = "0.8.0"

[lib]
proc-macro = true
