[package]
name = "quickcheck_macros"
version = "1.0.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "A macro attribute for quickcheck."
documentation = "https://docs.rs/quickcheck"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "../README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
license = "Unlicense OR MIT"
edition = "2021"
autotests = false

[lib]
name = "quickcheck_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
quickcheck = { path = "..", version = "1.0.0" }
